--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "js-yaml": "^3.8.4",
     "lodash": "^4.17.4",
     "postcss": "^6.0.5",
     "postcss-resolve-nested-selector": "^0.1.1",
